--- a/ProductOrderingApp/Base.lproj/Main.storyboard
+++ b/ProductOrderingApp/Base.lproj/Main.storyboard
@@ -1,24 +1,162 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O3z-xD-1Ql">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Products-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Products" id="BYZ-38-t0r" customClass="ViewController" customModule="ProductOrderingApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jxU-CT-61w">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="productCell" rowHeight="58" id="1n9-Cr-xYJ" customClass="ProductCell" customModule="ProductOrderingApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="58"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1n9-Cr-xYJ" id="2io-GJ-25P">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="57.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UTY-jq-Q8r">
+                                                    <rect key="frame" x="16" y="8" width="72" height="41.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="72" id="cVY-Y1-mO1"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amazon Echo Dot third Gen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ar-aj-Gzz">
+                                                    <rect key="frame" x="96" y="8" width="190" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 Rs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1c-z1-7GV">
+                                                    <rect key="frame" x="96" y="30" width="31" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="UTY-jq-Q8r" firstAttribute="leading" secondItem="2io-GJ-25P" secondAttribute="leading" constant="16" id="4KH-LR-b9W"/>
+                                                <constraint firstItem="3Ar-aj-Gzz" firstAttribute="leading" secondItem="UTY-jq-Q8r" secondAttribute="trailing" constant="8" id="5Wv-yI-kye"/>
+                                                <constraint firstItem="U1c-z1-7GV" firstAttribute="top" secondItem="3Ar-aj-Gzz" secondAttribute="bottom" constant="4" id="OPI-it-ygh"/>
+                                                <constraint firstItem="UTY-jq-Q8r" firstAttribute="top" secondItem="2io-GJ-25P" secondAttribute="top" constant="8" id="dTu-cu-Jyc"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3Ar-aj-Gzz" secondAttribute="trailing" constant="16" id="dfV-Kx-NNU"/>
+                                                <constraint firstItem="3Ar-aj-Gzz" firstAttribute="top" secondItem="UTY-jq-Q8r" secondAttribute="top" id="lsC-6r-znK"/>
+                                                <constraint firstAttribute="bottom" secondItem="UTY-jq-Q8r" secondAttribute="bottom" constant="8" id="nnM-m7-7id"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="U1c-z1-7GV" secondAttribute="trailing" constant="16" id="rk6-j0-8gR"/>
+                                                <constraint firstItem="U1c-z1-7GV" firstAttribute="leading" secondItem="UTY-jq-Q8r" secondAttribute="trailing" constant="8" id="vLa-fZ-juh"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="productImageView" destination="UTY-jq-Q8r" id="Tdz-PK-Q8t"/>
+                                            <outlet property="productName" destination="3Ar-aj-Gzz" id="JOJ-GQ-Rpb"/>
+                                            <outlet property="productPriceLabel" destination="U1c-z1-7GV" id="oIa-xY-jVZ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="8rJ-oR-Ebu"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="HLE-JH-nZ5"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jxU-CT-61w" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Rh3-WB-GJU"/>
+                            <constraint firstItem="jxU-CT-61w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="V0o-zp-hOv"/>
+                            <constraint firstItem="jxU-CT-61w" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Zah-OZ-gTe"/>
+                            <constraint firstItem="jxU-CT-61w" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="zxu-Vt-0GA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qi5-SW-u4e">
+                        <rightBarButtonItems>
+                            <barButtonItem image="orderHistory" style="plain" id="12n-GM-X82">
+                                <connections>
+                                    <segue destination="E19-4u-zsv" kind="show" id="sC2-2H-p8u"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem image="cartIcon" id="uSC-xP-WfK">
+                                <connections>
+                                    <segue destination="jlt-MT-zKr" kind="show" id="jr7-ZY-bb0"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cartButton" destination="uSC-xP-WfK" id="idc-Gg-vxG"/>
+                        <outlet property="orderHistoryButton" destination="12n-GM-X82" id="2sw-bq-0EA"/>
+                        <outlet property="productList" destination="jxU-CT-61w" id="B6B-AN-YW4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="653.60000000000002" y="792.95352323838085"/>
+        </scene>
+        <!--Cart-->
+        <scene sceneID="QPp-ug-5hp">
+            <objects>
+                <viewController title="Cart" id="jlt-MT-zKr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Nv-gn-a06">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="cDn-kP-z4u"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jX4-GS-vHa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1382" y="456"/>
+        </scene>
+        <!--Order History-->
+        <scene sceneID="PVW-1G-2yQ">
+            <objects>
+                <viewController title="Order History" id="E19-4u-zsv" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rKc-2s-w6M">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="RiF-6X-eVR"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4n6-Kx-gbC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1382" y="1151"/>
+        </scene>
+        <!--Products-->
+        <scene sceneID="UJ4-ke-1G4">
+            <objects>
+                <navigationController title="Products" automaticallyAdjustsScrollViewInsets="NO" id="O3z-xD-1Ql" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Aon-nf-dVy">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fZb-Ik-9UW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oIc-2R-ap4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-71.200000000000003" y="792.95352323838085"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cartIcon" width="24" height="24"/>
+        <image name="orderHistory" width="24" height="24"/>
+    </resources>
 </document>
