--- a/ProductOrderingApp/Base.lproj/Main.storyboard
+++ b/ProductOrderingApp/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="57.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UTY-jq-Q8r">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UTY-jq-Q8r">
                                                     <rect key="frame" x="16" y="8" width="72" height="41.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="72" id="cVY-Y1-mO1"/>
